fix: horizontal scroll

--- a/shelter/assets/styles/layout.css
+++ b/shelter/assets/styles/layout.css
@@ -1,6 +1,5 @@
 html {
   min-width: 1260px;
-  overflow-x: hidden;
 }
 
 .wrapper {
